factorial-cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: my-factorial-cache-app
  name: factorial-cache-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: my-factorial-cache-app
status:
  loadBalancer: {}
